--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="title_activity_maps">Map</string>
     <string name="title">don8</string>
     <string name="welcome">welcome to</string>
-    <string name="restaurant">I\'m a restaurant</string>
+    <string name="restaurant">RESTAURANT SIGN UP</string>
+    <string name="donation">DONATION CENTER SIGN UP</string>
+    <string name="login">LOGIN</string>
     <string name="restaurant_name">Restaurant Name</string>
 </resources>
